# BitmapProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Bitmap_lib/: CMakeLists.txt
Bitmap_lib/Bitmap/: bitmap.cpp  bitmap.h
Bitmap_lib/Bitmap/Bitmap_Headers/: bitmapfileheader.cpp  bitmapfileheader.h  bitmapheaders.h  bitmapinfoheader.cpp  bitmapinfoheader.h
Bitmap_lib/Color/: color.cpp  color.h  colortypes.h
Bitmap_lib/Color/HSL/: hsl.cpp  hsl.h
Bitmap_lib/Color/RGB/: rgb.cpp  rgb.h
Bitmap_lib/Header/: byteheader.cpp  byteheader.h
Bitmap_lib/Modification/: selection.cpp  selection.h
Bitmap_lib/Pixel/: pixel.cpp  pixel.h  pixelmap.cpp  pixelmap.h
